apps/nas/open-webui/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-private
  namespace: open-webui
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "chat.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: open-webui
      port: 80
    timeouts:
      request: 300s
      backendRequest: 300s
